<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016 NECTEC
  ~   National Electronics and Computer Technology Center, Thailand
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<resources>
    <string name="app_name">Android-Thai-Widget</string>

    <string name="lable_citizen_id">Citizen ID : </string>
    <string name="lable_house_id">House ID :</string>
    <string name="show_dialog">Show Dialog</string>
    <string name="area_picker">Area Picker</string>
    <string name="area_picker_dialog">Area Picker Dialog</string>
    <string name="update_area_value">update area value</string>
    <string name="update">update!</string>
    <string name="citizen_id">รหัสประชาชน</string>
    <string name="house_id">รหัสประจำบ้าน</string>
    <string name="area_unit">พื้นที่ ไร่/งาน/ตารางวา</string>
    <string name="address_thai">ที่อยู่ ตำบล/อำเภอ/จังหวัด</string>
    <string name="address_picker">Address Picker</string>
    <string name="address_picker_dialog">address picker dialog</string>
    <string name="date_thai">วัน/เดือน/ปี(พ.ศ.)</string>
    <string name="date_picker">Date Picker</string>
</resources>
